[package]
name = "aliyun-ots-rs"
version = "0.1.0"
authors = ["shaoxp <shaoxp@simplenature.cn>"]
license = "MIT"
edition = "2018"
description = "the sdk of rust for aliyun ots(tablestore) serivce"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features=["derive"]}
serde_json = "1.0.64"
md5 = "0.7.0"
hmac-sha1 = "0.1.3"
base64 = "0.13.0"
serde-xml-rs="0.4.1"
chrono = { version = "0.4.19", features = ["serde"] }

protobuf={version = "2.25.0",features = ["with-bytes"]}
reqwest = { version = "0.11.4", features = ["json","gzip"] }


# it is only for async test. I am using rocket for my backend. you are free to change to yours async test support
rocket = { version = "0.5.0-rc.1", features = ["json"] }